@@ -1,7 +1,7 @@
 Source: libibverbs
 Priority: extra
 Maintainer: Roland Dreier <rolandd@cisco.com>
-Build-Depends: @cdbs@, dpkg-dev (>= 1.13.19)
+Build-Depends: debhelper (>= 7), dpkg-dev (>= 1.13.19)
 Standards-Version: 3.8.2
 Section: libs
 Homepage: http://www.openfabrics.org/
