@@ -2,8 +2,9 @@ libibverbs (1.1.2-2) unstable; urgency=low
 
   * Move -dbg package to section debug.
   * Update to Standards-Version: 3.8.2.
+  * Change build system from cdbs to debhelper 7.
 
- -- Roland Dreier <rolandd@cisco.com>  Thu, 25 Jun 2009 10:26:26 -0700
+ -- Roland Dreier <rolandd@cisco.com>  Wed, 02 Sep 2009 12:09:23 -0700
 
 libibverbs (1.1.2-1) unstable; urgency=low
 
